# nvar

./: EEG_online.py  NVAR.py  README.md  main.py  pyproject.toml  reg_lorenz.ipynb  reg_lorenz_leaky.ipynb  reg_lorenz_multi_scale.ipynb  reg_sin.ipynb  river_test.ipynb  river_test.py
data/sub-00000/: sub-00000-labels.npy
data/sub-27670/: sub-27670-channel_coords.npy  sub-27670-labels.npy
data/sub-27817/: sub-27817-labels.npy
data/sub-27863/: sub-27863-channel_names.npy  sub-27863-labels.npy
viz/: vizualisation_online_2D.py  vizualisation_online_3D.py
