[project]
name = "nvar"
version = "0.1.0"
description = ""
authors = [
    {name = "christopher.bonnelly",email = "christopher.bonnelly@epita.fr"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib (>=3.10.9,<4.0.0)",
    "pyqtgraph (>=0.14.0,<0.15.0)",
    "pyqt6 (>=6.11.0,<7.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "reservoirpy (>=0.4.1,<0.5.0)",
    "pyopengl (>=3.1.10,<4.0.0)",
    "pyopengl-accelerate (>=3.1.10,<4.0.0)",
    "river (>=0.24.2,<0.25.0)"
]

[dependency-groups]
dev = [
    "numpy (>=2.4.4,<3.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
